# greentic-conformance

./: .gitignore  Cargo.toml  SECURITY_FIX_REPORT.md  pr-changed-files.txt  pr-comment.md
.github/workflows/: auto-tag.yml  ci.yml  codex-security-fix.yml  codex-semver-fix.yml  conformance-hosted.yml  conformance.yml  nightly-semver.yml  oauth-conformance.yml  oauth-fapi-nightly.yml  provider-azure.yml  provider-google.yml  publish.yml
crates/oauth-mock/: Cargo.toml
src/: shims.rs
tests/: flow_types_and_routing.rs
