[package]
name = "oauth-mock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT"
description = "Embedded OAuth2/OIDC mock provider for tests and CI"
repository = "https://github.com/greenticai/greentic-conformance"

[features]
default = ["pkce", "device_code"]
pkce = []
device_code = []

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
josekit = { workspace = true, optional = true }
once_cell = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
openidconnect = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }

